--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <p>Aspiring Data Analyst with a solid foundation in statistical analysis, data visualization, and
                         problem-solving. Proficient in Python, and SQL. Looking to join a dynamic team where I can apply
                         my echnical skills to uncover insights and support business objectives.</p>
-                    <p><a href="c:\Users\priya\Desktop\My Docs\Resume_Priya_Mishra.pdf" target="_blank"
+                    <p><a href="Resume_Priya_Mishra.pdf" target="_blank"
                             class="resume-link">Download My Resume</a></p>
                 </div>
             </div>
